fixed modal spacing

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     position: relative;
     height: 100vh;
     color: #555;
+    z-index: 2;
 }
 .wrapper {
     width: 1000px;
@@ -202,7 +203,7 @@ footer{
 .modal-content {
   background-color: #fefefe;
   margin: 5% auto; /* 15% from the top and centered */
-  padding: 20px;
+  padding: 2%;
   border: 1px solid #888;
   width: 60%; /* Could be more or less, depending on screen size */
 }
